intTests/test_type_errors/err038.log.good
Loading file "err038.saw"
Type errors:
  err038.saw:10:16-10:17: Error: Type mismatch.
    Perhaps a function was not given enough arguments?
    Expected: [t.0]
    Found:    [Int] -> [Int]

  <type of concat>:1:5-1:8: Note: The type [t.0] arises from this type annotation
  err038.saw:7:15-7:35: Note: The type [Int] -> [Int] arises from the context of the term


FAILED
